[package]
name = "webrtc-futures-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
env_logger = "0.9.0"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
webrtc = { git = "https://github.com/webrtc-rs/webrtc" }
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["fs","add-extension", "auth", "compression-full", "trace"] }
pico-args = "0.5.0"
console-subscriber = "0.1.6"