[package]
name = "webrtc-futures-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
webrtc = { git = "https://github.com/webrtc-rs/webrtc" }
tokio = { version = "1.0", features = ["full"] }
console-subscriber = "0.1.6"